--- a/application/admin/view/sharing/add_label.html
+++ b/application/admin/view/sharing/add_label.html
@@ -7,7 +7,7 @@
         <div class="col-lg-12">
             <div class="ibox float-e-margins">
                 <div class="ibox-title">
-                    <h5>添加话题</h5>
+                    <h5>添加标签</h5>
                 </div>
                 <div class="ibox-content">
                     <form method="post" class="form-horizontal"  action="{:url('add_label')}"  enctype="multipart/form-data">
