--- a/application/admin/view/turntable/add_lucky.html
+++ b/application/admin/view/turntable/add_lucky.html
@@ -7,7 +7,7 @@
         <div class="col-lg-12">
             <div class="ibox float-e-margins">
                 <div class="ibox-title">
-                    <h5>添加类别</h5>
+                    <h5>添加内容</h5>
                 </div>
                 <div class="ibox-content">
                     <form method="post" class="form-horizontal" id="ajaxForm" action="{:url('add_lucky')}" enctype="multipart/form-data">
