--- a/application/admin/view/goods/goods_brand.html
+++ b/application/admin/view/goods/goods_brand.html
@@ -1,7 +1,10 @@
 {extend name="common:base" /}
 
 {block name="content"}
-
+<style>
+    th span{margin-left: 20px;cursor:pointer;}
+    .red{color: red;}
+</style>
     <div class="row">
         <div class="col-lg-12">
             <div class="ibox float-e-margins">
@@ -23,10 +26,10 @@
                             <thead>
                             <tr>
                                 <th>ID</th>
-                                <th>名称</th>
+                                <th>名称<span data-id="name" onclick="order(this)">↑↑</span><span data-id="name desc" onclick="order(this)">↓↓</span></th>
                                 <th>logo </th>
-                                <th>状态</th>
-                                <th>添加时间</th>
+                                <th>状态<span data-id="status desc" onclick="order(this)">↑↑</span><span data-id="status" onclick="order(this)">↓↓</span></th>
+                                <th>添加时间<span  data-id="addtime" onclick="order(this)">↑↑</span><span data-id="addtime desc" onclick="order(this)">↓↓</span></th>
                                 <th>操作</th>
                             </tr>
                             </thead>
@@ -69,5 +72,17 @@
         }
     }
 
+    //排序
+    function order(obj){
+        order = $(obj).attr('data-id');
+        location.href="{:url('goods_brand')}?order="+order;
+    }
+
+    $('th span').each(function(k,v){
+        var tmp_order = '{$order}';
+        if(tmp_order == $(v).attr('data-id')){
+            $(v).addClass('red');
+        }
+    })
 </script>
 {/block}
