--- a/application/admin/view/goods/edit.html
+++ b/application/admin/view/goods/edit.html
@@ -605,8 +605,8 @@ function ajaxGetCategory(obj){
 
     //实例化富文本编辑器
     var ue = UE.getEditor('editor',{
-        initialFrameWidth:650,
-        initialFrameHeight:180,
+        // initialFrameWidth:650,
+        // initialFrameHeight:180,
         toolbars: [[
             'fullscreen', 'source', '|', 'undo', 'redo', '|', 'searchreplace' ,
             'bold', 'italic', 'underline', 'fontborder', 'strikethrough', 'superscript', 'subscript', 'removeformat', 'formatmatch','pasteplain', '|', 'forecolor', 'backcolor', 'insertorderedlist', 'insertunorderedlist', 'selectall', 'cleardoc', '|',
