--- a/application/card/view/index/gif.html
+++ b/application/card/view/index/gif.html
@@ -559,7 +559,7 @@ body,html{
     <div class="box3">
         <!-- 背景3 -->
         <div class="box3beijingbox xiaobox">
-            <image class="box3beijing" src="http://pic.962.net/up/2015-3/2015030811094598582.gif" />
+            <image class="box3beijing" src="{$gif_url}" />
         </div>
         <!-- 头像 -->
         <div class="touxiangbox xiaobox">
