--- a/application/admin/view/config/base.html
+++ b/application/admin/view/config/base.html
@@ -200,8 +200,8 @@
 <script>
     //实例化富文本编辑器
     var ue = UE.getEditor('editor',{
-        initialFrameWidth:650,
-        initialFrameHeight:180,
+        // initialFrameWidth:650,
+        // initialFrameHeight:180,
         toolbars: [[
             'fullscreen', 'source', '|', 'undo', 'redo', '|', 'searchreplace' ,
             'bold', 'italic', 'underline', 'fontborder', 'strikethrough', 'superscript', 'subscript', 'removeformat', 'formatmatch','pasteplain', '|', 'forecolor', 'backcolor', 'insertorderedlist', 'insertunorderedlist', 'selectall', 'cleardoc', '|',
@@ -212,8 +212,8 @@
     });
     //实例化富文本编辑器
     var ue = UE.getEditor('editor2',{
-        initialFrameWidth:650,
-        initialFrameHeight:180,
+        // initialFrameWidth:650,
+        // initialFrameHeight:180,
         toolbars: [[
             'fullscreen', 'source', '|', 'undo', 'redo', '|', 'searchreplace' ,
             'bold', 'italic', 'underline', 'fontborder', 'strikethrough', 'superscript', 'subscript', 'removeformat', 'formatmatch','pasteplain', '|', 'forecolor', 'backcolor', 'insertorderedlist', 'insertunorderedlist', 'selectall', 'cleardoc', '|',
