--- a/application/admin/view/box_cate/edit.html
+++ b/application/admin/view/box_cate/edit.html
@@ -10,8 +10,9 @@
                     <h5>添加盒子</h5>
                 </div>
                 <div class="ibox-content">
-                    <form method="post" class="form-horizontal" id="ajaxForm" action="{:url('box_cate/cate_post')}" enctype="multipart/form-data">
+                    <form method="post" class="form-horizontal" id="ajaxForm2" action="{:url('box_cate/cate_post')}" enctype="multipart/form-data">
                         <input type="hidden" name="id" value="{$info.id}">
+                        <input type="hidden" name="gif" value="{$info.gif}">
                         <div class="form-group">
                             <label class="col-sm-2 control-label">名称</label>
                             <div class="col-sm-9">
@@ -46,8 +47,7 @@
                                 <img src="{$info.gif|default=''}" id='img_show2' style=" max-width: 300px; max-height: 300px">
                             </div>
                             <div class="form-group" style="margin-left:18%;">
-                                <label title="上传动图" for="pictur_btn2" class="btn btn-primary" id="pictur">上传动图
-                                    <input type="file" accept="image/jpg,image/jpeg,image/bmp,image/png,image/gif/*" name="file2" id="pictur_btn2" class="hide" />
+                                <label title="上传动图" for="image_file" class="btn btn-primary" id="pictur">上传动图
                                 </label>
                             </div>
                         </div>
@@ -76,6 +76,10 @@
                                 <button class="btn btn-white" onclick="javascript:history.back(-1);return false;">取消</button>
                             </div>
                         </div>
+                    </form>
+                    <!-- 图片上传 -->
+                    <form method="post" class="form-horizontal" id="ajaxForm" action="{:url('goods/upload_file')}" enctype="multipart/form-data">
+                        <input type="file" id="image_file" value="" accept="image/*" name="file" onchange="upload_file()" style="display: none">
                     </form>
                 </div>
             </div>
@@ -144,5 +148,17 @@
             }
         });
     });
+
+    //文件上传
+    function upload_file(){
+        $("#ajaxForm").ajaxSubmit(function (data) {
+            if(data.status == 1){
+                $('input[name="gif"]').val(data.data);
+                $('#img_show2').attr('src',data.data);
+            }else{
+                alert(data.msg);
+            }
+        });
+    }
 </script>
 {/block}
