商品详情正方形

--- a/application/card/view/index/gif.html
+++ b/application/card/view/index/gif.html
@@ -62,6 +62,9 @@ body,html{
 
 /* 背景3 */
 .box3beijingbox{
+	position: absolute;
+	right: 0;
+	bottom: 0;
     top: 0;
     left: 0;
     z-index: 1;
