--- a/application/admin/view/goods/edit.html
+++ b/application/admin/view/goods/edit.html
@@ -472,7 +472,7 @@ function ajaxGetAttr(obj){
     getSyfm();
     $.post("{:url('goods/ajaxGetAttr')}",{'id':id},function(data){
         if(data.status){
-            var option = '<option>请选择二级栏目</option>';
+            var option = '<option  value="">请选择二级栏目</option>';
             $.each(data.data,function(k,v){
                 option += '<option value="'+v.id+'">'+v.name+'</option>';
             })
@@ -491,7 +491,7 @@ function ajaxGetCategory(obj){
     }
     $.post("{:url('goods/ajaxGetCategory')}",{'id':id},function(data){
         if(data.status){
-            var option = '<option>请选择二级分类</option>';
+            var option = '<option  value="">请选择二级分类</option>';
             $.each(data.data,function(k,v){
                 option += '<option value="'+v.cat_id+'">'+v.cat_name+'</option>';
             })
