--- a/application/admin/view/goods/add.html
+++ b/application/admin/view/goods/add.html
@@ -158,7 +158,7 @@
                                         {/volist}
                                     </select>
                                 </div>
-                                <div style="line-height:34px;float:left;margin:0 10px 0 0;">
+                                <div style="line-height:34px;float:left;margin:0 10px 0 0;" id="nmgb">
                                     <select class="form-control" name="goods_attr2">
                                         <option value="" >请选择二级栏目</option>
                                     </select>
@@ -410,7 +410,7 @@ function upload_file2(){
         }
     });
 }
-
+$('#nmgb').css('display','none');
 //ajax获取二级栏目
 function ajaxGetAttr(obj){
     var id = $(obj).val()
@@ -418,6 +418,12 @@ function ajaxGetAttr(obj){
         $('select[name="goods_attr2"]').html('<option>请选择二级栏目</option>');
         return false;
     }
+    if(id < 7){
+        return false;
+        $('#nmgb').css('display','none');
+    }
+    $('#nmgb').css('display','block');
+
     getSyfm();
     $.post("{:url('goods/ajaxGetAttr')}",{'id':id},function(data){
         if(data.status){
