--- a/application/admin/view/goods/edit.html
+++ b/application/admin/view/goods/edit.html
@@ -187,7 +187,7 @@
                                         {/volist}
                                     </select>
                                 </div>
-                                <div style="line-height:34px;float:left;margin:0 10px 0 0;">
+                                <div style="line-height:34px;float:left;margin:0 10px 0 0;" id="nmgb" {if condition="$info.goods_attr2 lt 8"}style="display:none;"{/if}>
                                     <select class="form-control" name="goods_attr2">
                                         {volist name="goods_attr2" id="vo"}
                                         <option value="{$vo.id}" {if condition="$info.goods_attr2 eq $vo.id"}selected{/if} >{$vo.name}</option>
@@ -469,6 +469,11 @@ function ajaxGetAttr(obj){
         $('select[name="goods_attr2"]').html('<option>请选择二级栏目</option>');
         return false;
     }
+    if(id < 7){
+        $('#nmgb').css('display','none');
+        return false;
+    }
+    $('#nmgb').css('display','block');
     getSyfm();
     $.post("{:url('goods/ajaxGetAttr')}",{'id':id},function(data){
         if(data.status){
