--- a/application/admin/view/goods/index.html
+++ b/application/admin/view/goods/index.html
@@ -1,7 +1,9 @@
 {extend name="common:base" /}
 
 {block name="content"}
-
+<style>
+    .sort{    height: 24px; line-height: 24px; width: 50px; border: #FC6 solid 1px;}
+</style>
     <div class="row">
         <div class="col-lg-12">
             <div class="ibox float-e-margins">
@@ -88,7 +90,10 @@
                                 <th>商品状态 </th>
                                 <th>商品价格（元）</th>
                                 <th>库存</th>
-                                <th>销量</th>
+                                <!-- <th>销量</th> -->
+                                {if condition="$goods_attr1 eq 5"}
+                                    <th>排序</th>
+                                {/if}
                                 <th>上架时间</th>
                                 <th>首页推荐</th>
                                 <th>操作</th>
@@ -105,7 +110,10 @@
                                 <td>{if condition="$vo.is_show"}已上架{else /}未上架{/if}</td>
                                 <td>{$vo.price}</td>
                                 <td>{$vo.stock}</td>
-                                <td>{$vo.number_sales}</td>
+                                <!-- <td>{$vo.number_sales}</td> -->
+                                {if condition="$goods_attr1 eq 5"}
+                                    <td><input type="text" name="1" data-id="{$vo.goods_id}" value="{$vo.sort}" class="sort" onchange="goods_sort(this)"></td>
+                                {/if}
                                 <td>{$vo.add_time|date="Y-m-d",###}</td>
                                 <td align="left" axis="col0">
                                         <div style="text-align: left; width: 30px;">
@@ -178,6 +186,16 @@
                 }
             },'json');
         }
+    }
+
+    function goods_sort(obj){
+        var sort = $(obj).val();
+        var goods_id = $(obj).attr('data-id');
+        $.post('{:url('goods/edit_sort')}',{'sort':sort,'goods_id':goods_id},function(res){
+            if(res.status != 1){
+                layer.msg(res.msg);
+            }
+        },'json')
     }
 
     function is_show_all(is_show){
