--- a/application/card/view/index/gif.html
+++ b/application/card/view/index/gif.html
@@ -565,12 +565,12 @@ body,html{
             <image class="box3beijing" src="{$gif_url}" />
         </div>
         <!-- 头像 -->
-        <div class="touxiangbox xiaobox">
+        <!--<div class="touxiangbox xiaobox">-->
                 <!-- <image class="touxiang" src="{$info.photo_url}" /> -->
-                <div class="touxiang">
+                <!--<div class="touxiang">
                     <image class="touxiangimg" src="{$info.photo_url}" />
                 </div>
-            </div>
+            </div>-->
         
         <!-- 文字四 -->
         <div class="wenzisibox xiaobox">
