--- a/application/admin/view/common/base.html
+++ b/application/admin/view/common/base.html
@@ -186,7 +186,7 @@
 		<script src="__INSPINIA__/js/plugins/datapicker/bootstrap-datepicker.js"></script>
 	
 		<script src="__JS__/common.js?v=20190701"></script>
-
+		<script src="__LIB__/layer/layer.js"></script>
 		<!-- timer -->
 		<script type="text/javascript" src="__STATIC__/timer/calendar.js"></script>
 
